tests/NormalTests/paczka1/fuzzy1/91065177.err
Error in line 1: IgNQwNZh54 S512 43,8
Error in line 8: BPlJS9dA7 S512 11,3
Error in line 15: IgNQwNZh54 A925 17,5
Error in line 19: X1PBzXGfbG S512 44,8
Error in line 18: gVcta S13 8,4
Error in line 28: BPlJS9dA7 S13 71,8
Error in line 25: X1PBzXGfbG S13 27,1
Error in line 30: gVcta A638 39,4
Error in line 35: gVcta S512 80,3
